--- a/src/main/webapp/jnt_searchResults/html/searchHit.jspf
+++ b/src/main/webapp/jnt_searchResults/html/searchHit.jspf
@@ -1,4 +1,4 @@
-<h4><a href="${hit.link}">${fn:escapeXml(hit.title)}</a></h4>
+<h4><a href="${hit.link}">${fn:escapeXml(functions:abbreviate(hit.title, 100,120,'...'))}</a></h4>
 
 <div class="resultslistDesc">${hit.excerpt}</div>
 <div class="resultsListFileType">${hit.contentType}</div>
